Revisat manager i resolts problemes amb lazy loading